<resources>
    <string name="app_name">Xổ số Đà Lạt APP</string>
    <string name="close_button">button</string>
    <string name="type1">Lotto - Để chơi Xổ số, hãy đánh dấu các ô vuông được đánh số trên phiếu chơi với sáu số đã chọn của bạn. nhà bán lẻ xổ số sau đó với phiếu chơi (hoặc đại lý). Sự lựa chọn của bạn được cửa hàng nhập vào thiết bị đầu cuối trực tuyến, nơi tạo ra vé trò chơi của bạn. Biên lai thực tế phải được gửi và xác thực trong trường hợp thắng, không phải phiếu chơi mà thay vào đó là vé. Trước khi rời đi, hãy luôn kiểm tra kỹ xem vé trò chơi có đúng ngày và số hay không. Các cửa hàng tiện lợi, trạm xăng dầu, siêu thị đều có đại lý vé số.</string>
    <string name="type2">Little Lottos - Để chơi Xổ số, hãy đánh dấu các ô vuông được đánh số trên phiếu chơi với sáu số đã chọn của bạn. nhà bán lẻ xổ số sau đó với phiếu chơi (hoặc đại lý). Sự lựa chọn của bạn được cửa hàng nhập vào thiết bị đầu cuối trực tuyến, nơi tạo ra vé trò chơi của bạn. Biên lai thực tế phải được gửi và xác thực trong trường hợp thắng, không phải phiếu chơi mà thay vào đó là vé. Trước khi rời đi, hãy luôn kiểm tra kỹ xem vé trò chơi có đúng ngày và số hay không. Các cửa hàng tiện lợi, trạm xăng dầu, siêu thị đều có đại lý vé số.</string>
    <string name="type3">The Dailies - The Pick 3 and Pick 4 may be the games for you if you like to try your luck frequently or just want greater odds. You can play them twice a day, six days a week, and frequently just once a day on Sundays in most states. Players can select any three-digit number between 000 and 999 for Pick 3 (also known as Cash 3), and any four-digit number between 0000 and 9999 for Pick 4 (also known as Cash 4).</string>
    <string name="type4">Trò chơi đa trạng thái - Có hai hình vẽ độc đáo trong Mega Millions, một trong số đó là một quả bóng "tiền thưởng" được gọi là Megaball. Tất nhiên, có những tỷ lệ cược rất lớn ngoài giải thưởng "Mega". Khi nó đưa ra giải độc đắc 363 triệu đô la vào năm 2000, nó vẫn được biết đến với cái tên The Big Game và thu hút sự chú ý của giới truyền thông.</string>
    <string name="type5">Trò chơi tức thì - Các trò chơi "cào bằng", thường được gọi là "trò chơi tức thì", không đòi hỏi phải chọn số và có thể được mua bất cứ khi nào bạn muốn. Trầy xước phổ biến vì một số lý do. Trước hết, chơi các trò chơi rất thú vị và đầy màu sắc. Thứ hai, người chơi không cần phải chọn số hoặc hoàn thành phiếu chơi. Cuối cùng, không cần phải chờ đợi; chỉ cần cạo sạch các nốt mụn.</string>
    <string name="type6">Lựa chọn nhanh - Lựa chọn nhanh (số ngẫu nhiên do máy tính tạo) là một giải pháp thay thế đơn giản cho những ai không muốn mất thời gian để chọn số của riêng mình. Bạn chỉ cần thông báo cho nhân viên bán hàng rằng bạn muốn Chọn nhanh hơn là hoàn thành phiếu chơi. Sau đó, bạn sẽ nhận được một vé từ máy với các con số được chọn ngẫu nhiên. Tại sao người chơi lại tự chọn số khi Chọn nhanh rất tiện lợi? Nhiều người chơi nghĩ rằng họ có lợi thế vì "hệ thống" của họ, bất kể nó có thể là gì.</string>
    <string name="ways1">Cuối cùng, chúng tôi đạt đến số học. Việc bạn quyết định sử dụng kỹ thuật này thực sự phụ thuộc vào việc bạn có nghĩ rằng vũ trụ có sức mạnh hay không.
Bất kỳ ai cũng có thể tính toán các "số" của riêng mình có ý nghĩa riêng đối với họ.</string>
    <string name="ways2">Cách tiếp cận này đòi hỏi phải xem xét các lần rút trước và xác định các quả bóng được rút ra thường xuyên nhất. Và có rất nhiều tài liệu có sẵn để bạn nghiên cứu vì tình yêu của thế giới với xổ số.
Mặc dù thực tế là không có lời giải thích hợp lý cho lý do tại sao một số con số được vẽ thường xuyên hơn những con số khác, một số có vẻ nóng hơn những con số khác.</string>
    <string name="ways3">Hạn chế duy nhất về việc có bao nhiêu cách chọn số ngẫu nhiên là sự sáng tạo của chính bạn. Thậm chí chỉ cần thả bút vào một vài con số và chọn số mà nó tiếp cận sẽ hoạt động.
Chúng ta có thể nói về các kỹ thuật chọn số ngẫu nhiên trong nhiều giờ, nhưng chúng tôi sẽ cho phép bạn sử dụng trí tưởng tượng của mình. Bạn đang làm điều đó một cách chính xác miễn là cuối cùng bạn có số lượng lựa chọn phù hợp.</string>
    <string name="ways4">Ví dụ: bạn có thể thích số 10 hơn vì đó là sinh nhật của bạn hoặc bạn có thể có mối liên hệ đặc biệt với số 28 mà không rõ lý do.
Từ những ngày kỷ niệm đến áo đấu thể thao, những con số may mắn có thể có nhiều hình thức khác nhau. Chọn những người bạn thích hoặc có giá trị tình cảm thực sự là tất cả những gì được yêu cầu.</string>
    <string name="ways5">Mọi lựa chọn trên phiếu xổ số của bạn đều phù hợp với một mẫu mà bạn sẽ thấy khi nhìn xuống. Sử dụng kỹ thuật này, bạn chọn số bằng cách vẽ chúng trên phiếu.
Ví dụ, bạn có thể vẽ một chữ cái trong bảng chữ cái hoặc đơn giản là di chuyển trong một vòng tròn. Hãy biến thứ gì đó trông thật tuyệt khi bạn trình bày với nhân viên thu ngân bằng cách sử dụng tài năng nghệ thuật của bạn.</string>
    <string name="pri1">Chào mừng bạn đến với thông báo bảo mật cho Xổ số Đà Lạt APP.
Xổ số Đà Lạt luôn cam kết bảo mật những thông tin cá nhân của bạn và tôn trọng quyền riêng tư của bạn. Thông báo về quyền riêng tư này sẽ giải thích cách chúng tôi xử lý dữ liệu cá nhân của bạn khi bạn truy cập trang web của chúng tôi (độc lập với việc bạn truy cập từ đâu), cũng như các quyền riêng tư của bạn và các biện pháp bảo vệ pháp lý được áp dụng để đảm bảo an toàn cho bạn.
Bạn có thể nhấp qua các phần khác nhau của thông báo bảo mật được liệt kê bên dưới vì nó được trình bày theo kiểu nhiều lớp. Bằng cách nhấp vào biểu tượng ở cuối trang này, bạn cũng có thể in bản sao của thông báo. Để hiểu rõ hơn các định nghĩa của bất kỳ cụm từ nào được đề cập trong thông báo về quyền riêng tư này, vui lòng tham khảo Bảng chú giải thuật ngữ.</string>
    <string name="pri2">Bảo mật thông tin cá nhân của bạn là rất quan trọng đối với chúng tôi. Chúng tôi tuân thủ các tiêu chuẩn ngành được chấp nhận chung, bao gồm các biện pháp bảo vệ hành chính, vật lý và kỹ thuật thích hợp để ngăn chặn việc sử dụng, truy cập, thay đổi hoặc tiết lộ trái phép dữ liệu cá nhân của bạn. Ngoài ra, chúng tôi chỉ cho phép nhân viên, đại lý, nhà thầu và các bên thứ ba khác có nhu cầu kinh doanh biết quyền truy cập vào thông tin cá nhân của bạn. Họ có nghĩa vụ duy trì tính bảo mật và sẽ chỉ xử lý thông tin cá nhân của bạn theo chỉ dẫn của chúng tôi.</string>
    <string name="pri3">Để cung cấp cho bạn dịch vụ / sản phẩm tốt nhất và trải nghiệm tốt nhất và an toàn nhất, chúng tôi có lợi nhất là điều hành và quản lý công ty của mình với lợi ích hợp pháp. Trước khi chúng tôi xử lý dữ liệu cá nhân của bạn cho các mục đích hợp pháp của mình, chúng tôi đảm bảo rằng chúng tôi sẽ tính đến và cân nhắc mọi tác động tiềm ẩn đối với bạn (cả tích cực và tiêu cực). Chúng tôi không sử dụng thông tin cá nhân của bạn cho những việc mà tác động đến bạn sẽ lớn hơn lợi ích của chúng tôi (trừ khi chúng tôi có sự đồng ý của bạn hoặc được yêu cầu hoặc cho phép của pháp luật).
Bằng cách liên hệ với chúng tôi, bạn có thể tìm hiểu thêm về cách chúng tôi cân nhắc lợi ích hợp pháp của mình so với bất kỳ ảnh hưởng nào có thể xảy ra đối với bạn liên quan đến các hoạt động cụ thể.
Thực hiện hợp đồng đề cập đến việc sử dụng dữ liệu của bạn để thực hiện hợp đồng mà bạn là một bên hoặc thực hiện hành động theo yêu cầu của bạn trước khi giao kết hợp đồng.
Xử lý dữ liệu cá nhân của bạn để tuân thủ yêu cầu pháp lý hoặc quy định có nghĩa là chúng tôi phải làm như vậy để hoàn thành nghĩa vụ mà chúng tôi phải tuân theo.</string>
    <string name="toc1">Các cá nhân dưới mười tám tuổi (18) không được phép sử dụng Trang web (hoặc bất kỳ độ tuổi áp dụng cao hơn nào ở quốc gia có liên quan). Bạn không được phép tạo Tài khoản (được mô tả bên dưới) hoặc sử dụng Dịch vụ nếu độ tuổi của bạn dưới 18 (hoặc bất kỳ độ tuổi áp dụng nào cao hơn) (được định nghĩa bên dưới).</string>
    <string name="toc2">Trong những trường hợp thích hợp, chúng tôi có quyền chấm dứt Tài khoản của Người dùng và / hoặc quyền truy cập vào Trang web và giữ lại bất kỳ giải thưởng nào còn lại nếu chúng tôi biết được thông qua các kênh đáng tin cậy rằng Người dùng dưới 18 tuổi (hoặc độ tuổi áp dụng cao hơn ).</string>
    <string name="toc3">Bạn có nhiệm vụ truy cập và sử dụng Trang web cũng như các Dịch vụ tuân theo Điều khoản, tất cả các luật và quy định có liên quan cũng như Chính sách trò chơi có trách nhiệm (xem phần 13). Bạn có nhiệm vụ đảm bảo rằng việc sử dụng Trang web và Dịch vụ của bạn từ quốc gia nơi bạn đang chơi là được phép.

Trang web dành riêng cho việc sử dụng cá nhân và các hoạt động giải trí.</string>
    <string name="toc4">Vì Xổ Số Đà Lạt nhằm mục đích quảng bá trò chơi và cá cược có trách nhiệm, chúng tôi cấm bất kỳ ai dưới 18 tuổi (hoặc độ tuổi hợp pháp ở quốc gia có liên quan) mở tài khoản, sử dụng dịch vụ của chúng tôi hoặc mua Trò chơi Win liền; và (ii) cấm bất kỳ ai dưới 21 tuổi đăng ký tài khoản Xổ số Đà Lạt (ii) chủ trương rằng tất cả Người dùng đặt ra các hạn chế đối với quyền truy cập của họ vào Rút thăm Xổ số và Trò chơi Trúng ngay; và (iii) không đề nghị Người dùng sử dụng Xổ số hoặc Trò chơi Giành ngay làm phương tiện trả nợ hoặc như một nguồn thu nhập. Chúng tôi khuyên bạn nên ngừng sử dụng và đóng Tài khoản của mình bằng cách sử dụng Công cụ Trang web mà chúng tôi cung cấp trên Trang web nếu bạn tin rằng bạn đang sử dụng Dịch vụ của chúng tôi hoặc mua Trò chơi Instant Win một cách thiếu trách nhiệm. Chúng bao gồm những điều sau:</string>
    <string name="toc41">• Bạn có tùy chọn, theo quyết định của mình, để hạn chế số tiền bạn có thể gửi trong một khoảng thời gian nhất định bằng cách sử dụng các công cụ của Trang web.</string>
    <string name="toc42">• Bạn có thể tự do quyết định thời gian bạn có thể đăng nhập vào trang web trong một phiên duy nhất. Bạn sẽ đăng xuất khỏi trang web và bất kỳ trò chơi nào vẫn đang diễn ra sau khi khoảng thời gian này trôi qua.</string>
    <string name="toc43">• Sử dụng các khả năng trên Trang web, bạn có thể quyết định có dành cho mình thời gian tạm dừng cho bất kỳ việc gì từ một ngày đến sáu tuần hay không. Bạn sẽ không thể chơi, gửi tiền, đặt hàng hoặc mua bất cứ thứ gì vào lúc này.</string>
    <string name="toc44">• Bạn có tùy chọn để thiết lập một kiểm tra thực tế, chỉ có sẵn cho Trò chơi Thắng tức thì, theo lựa chọn của bạn. Kiểm tra thực tế tạm dừng chơi mỗi giờ và hiển thị thời gian bạn đã chơi, cùng với số tiền thắng và thua của bạn, trong suốt thời gian đó.</string>
    <string name="toc45">• Sử dụng các tính năng trên Trang web, bạn có thể chọn cấm mình chơi trong một khoảng thời gian nhất định hoặc vô thời hạn, trong thời gian đó, bạn sẽ không thể truy cập vào Tài khoản của mình.</string>
    <string name="button_next">next_page</string>
    <string name="terms_and_policy"><![CDATA[Chính sách bảo mật & Các điều khoản và điều kiện]]></string>
<string name="abt1">Có một số trò chơi xổ số khác, nhưng xổ số là trò chơi được nhiều người yêu thích nhất. Sáu số được chọn ngẫu nhiên từ một nhóm các số cho Xổ số (như số 1 đến số 47). Bạn có thể mua một số Lotto, còn được gọi là phiếu chơi, có sáu số hoặc được chọn ngẫu nhiên hoặc được chỉ định ngẫu nhiên. Sau đó, các con số được chọn trong một cuộc rút thăm. Bạn thắng nếu các con số trong trò chơi đã chọn của bạn trượt thẳng hàng.</string>
    <string name="abt2">Nếu bạn thường xuyên chơi xổ số, việc mua vé thường xuyên có thể khiến bạn "lãng phí" tài chính nếu không trúng thưởng. Điều quan trọng cần nhớ là xổ số có tỷ lệ thành công cực kỳ thấp, có nghĩa là mỗi vé đều có khả năng cao là bạn sẽ không trúng thưởng.</string>
<string name="abt3">Nó thay đổi. Đối với những cá nhân thích chơi xổ số, một số nhóm nhỏ hơn có thể giúp cải thiện tỷ lệ chiến thắng. Tuy nhiên, những người khác tin rằng chi phí của trò chơi không xứng đáng với khả năng thành công mong manh.</string>
    <string name="button14">button</string>
</resources>