<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg14"
    tools:context=".PageAbout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/navbar14"
            android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="Chơi các câu hỏi thường gặp về xổ số"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:shadowColor="#FFD600"
        android:shadowRadius="5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="Làm thế nào bạn có thể chơi xổ số?"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:shadowColor="#FFD600"
        android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/abt1"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowColor="#FFD600"
            android:shadowRadius="5"
            android:justificationMode="inter_word"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="Chơi xổ số có lãng phí tiền bạc không?"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowColor="#FFD600"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/abt2"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowColor="#FFD600"
            android:shadowRadius="5"
            android:justificationMode="inter_word"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="Xổ số có đáng giá không?"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowColor="#FFD600"
            android:shadowRadius="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/abt3"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowColor="#FFD600"
            android:shadowRadius="5"
            android:justificationMode="inter_word"/>

        <Button
            android:id="@+id/oval"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/customborder3"
            app:backgroundTint="#B18D05"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="LƯNG"
            android:textSize="20dp"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:shadowRadius="5"
            android:contentDescription="@string/button14"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>